--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,84 @@
+# macOS
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.pyo
+
+# Distribution / packaging
+.Python
+build/
+dist/
+.eggs/
+*.egg-info/
+*.egg
+pip-wheel-metadata/
+
+# Virtual environments
+.venv/
+.venv*/
+venv/
+env/
+ENV/
+
+# Testing & coverage
+.coverage
+.coverage.*
+.cache/
+.pytest_cache/
+htmlcov/
+
+# Type checkers & formatters
+.mypy_cache/
+.pyre/
+.pytype/
+
+# Jupyter
+.ipynb_checkpoints/
+*.ipynb
+
+# Logs & temp files
+*.log
+*.tmp
+*.temp
+
+# Environment & secrets
+.env
+.env.*
+*.env
+
+# VS Code
+.vscode/
+
+# JetBrains IDEs
+.idea/
+
+# Node / front-end (if present)
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Local caches
+.cache/
+
+# App-specific: keep data JSONs, ignore transient data
+# Commit files in `data/` like alerts.json, ground_truth.json, threat_intel.json
+# but ignore temporary or generated artifacts
+data/tmp/
+**/*.sqlite
+**/*.db
+**/*.pkl
+**/*.csv
+**/*.tsv
+
+# Misc
+.DS_Store?
+Thumbs.db
 # Python
 __pycache__/
 *.py[cod]
