--- a/.env.example
+++ b/.env.example
@@ -1,21 +1,60 @@
-# OpenAI Configuration
-OPENAI_API_KEY=your_openai_api_key_here
+# ===================================================================
+# Agentic SOC POC - Environment Configuration
+# ===================================================================
+# Copy this file to .env and configure your settings
+
+# ===================================================================
+# LLM Provider Configuration
+# ===================================================================
+# Options: "openai", "gemini", "mock", "mock-data"
+# 
+# - openai: Uses OpenAI GPT models (requires OPENAI_API_KEY)
+# - gemini: Uses Google Gemini models (requires GEMINI_API_KEY)
+# - mock or mock-data: Uses mock LLM with realistic test data (NO API KEY REQUIRED)
+#
+# Default: "mock-data" - works out of the box for testing without any API keys
+# The application will automatically fallback to mock if API keys are missing
+LLM_PROVIDER=mock-data
+
+# ===================================================================
+# OpenAI Configuration (only required if LLM_PROVIDER=openai)
+# ===================================================================
+# Get your API key from: https://platform.openai.com/api-keys
+# Uncomment and set if using OpenAI:
+# OPENAI_API_KEY=sk-your-openai-api-key-here
 OPENAI_MODEL=gpt-4-turbo-preview
 
-# API Configuration
+# ===================================================================
+# Google Gemini Configuration (only required if LLM_PROVIDER=gemini)
+# ===================================================================
+# Get your API key from: https://makersuite.google.com/app/apikey
+# Uncomment and set if using Gemini:
+# GEMINI_API_KEY=your-gemini-api-key-here
+GEMINI_MODEL=gemini-pro
+
+# ===================================================================
+# API Server Configuration
+# ===================================================================
 API_HOST=0.0.0.0
 API_PORT=8000
 API_RELOAD=true
 
-# Logging
+# ===================================================================
+# Logging Configuration
+# ===================================================================
 LOG_LEVEL=INFO
 
-# Agent Configuration
+# ===================================================================
+# Agent Temperature Settings
+# ===================================================================
+# Controls randomness in agent responses (0.0 = deterministic, 1.0 = creative)
 TRIAGE_TEMPERATURE=0.1
 INVESTIGATION_TEMPERATURE=0.3
 DECISION_TEMPERATURE=0.1
 RESPONSE_TEMPERATURE=0.2
 
-# Alert Processing
+# ===================================================================
+# Alert Processing Configuration
+# ===================================================================
 MAX_CONCURRENT_ALERTS=5
 ALERT_TIMEOUT_SECONDS=300
